@@ -4669,5 +4669,32 @@
       0
     ],
     "price": 100
+  },
+  {
+    "id": 176,
+    "atypeId": 1,
+    "description": "Disables all experience gain, in case you would like to\nfarm an area without breaking progression by over-leveling.",
+    "etypeId": 6,
+    "traits": [
+      {
+        "code": 23,
+        "dataId": 9,
+        "value": 0
+      }
+    ],
+    "iconIndex": 225,
+    "name": "EXP Supressor",
+    "note": "",
+    "params": [
+      0,
+      0,
+      0,
+      0,
+      0,
+      0,
+      0,
+      0
+    ],
+    "price": 10
   }
 ]
