@@ -152,7 +152,7 @@ Additions:
    > [REDACTED HELMET]
    > [REDACTED TEAR]
    > [REDACTED WING]
- - Added 87 new equipment items:
+ - Added 88 new equipment items:
   ~ 17 weapons:
    > Steel Knuckles
    > Shadowspec Sword
@@ -205,7 +205,7 @@ Additions:
    > Tellurian Knight's Bulwark
    > Vishnu's Aegis
    > Glacial Bulwark
-  ~ 25 accessories:
+  ~ 26 accessories:
    > Champion's Talisman
    > Soulstealer's Necklace
    > Vigilante's Charm
@@ -231,6 +231,7 @@ Additions:
    > Seshat's Tome
    > Seshat's Teachings
    > Seshat's Opus
+   > EXP Supressor
   ~ 9 magic equips:
    > Comet Charm
    > Magic Coin
